View Issue Details [ Jump to Notes ] [ Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0015441CMakeCMakepublic2015-03-11 16:172016-06-10 14:31
ReporterTom Hughes 
Assigned ToGregor Jasny 
PrioritynormalSeverityfeatureReproducibilityalways
StatusclosedResolutionmoved 
PlatformApple MacOSOS XOS Version10.4.10
Product VersionCMake 3.0.2 
Target VersionFixed in Version 
Summary0015441: Xcode generator does not generate scheme
DescriptionAfter generating an Xcode project with cmake, an xcode scheme is not created by cmake (https://developer.apple.com/library/ios/featuredarticles/XcodeConcepts/Concept-Schemes.html [^]). When opening the project with Xcode, Xcode seems to automatically generate the scheme, but this makes it hard to use continuous integration to archive an iOS app using xcodebuild (archiving requires a scheme):

xcodebuild -project generated_project.xcodeproj -configuration Release -scheme name_of_scheme archive
TagsNo tags attached.
Attached Files

 Relationships
related to 0015469closed Xcode projects misuses targets for ALL_BUILD; it should use a scheme instead 
related to 0015946closedKitware Robot "xcodebuild -target foo install" should do something sensible 
related to 0015183closedGregor Jasny Xcode INSTALL_PATH setting makes archiving impossible 

  Notes
(0038280)
Brad King (manager)
2015-03-23 11:57

I marked 0015469 as resolved because we don't need more than one issue to track this. See also comment 0015469:0038278.

The feature requested here is explicit scheme creation.
(0040004)
Gregor Jasny (developer)
2015-12-20 11:38

I started looking into this topic but it's a rather complex one. First decision would be if this should be implemented in the C++ core or as a CMake Module. So far I'm able to create a simple scheme for library targets.

The next step would be to draft an API.
(0042728)
Kitware Robot (administrator)
2016-06-10 14:29

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2015-03-11 16:17 Tom Hughes New Issue
2015-03-23 11:51 Brad King Relationship added related to 0015469
2015-03-23 11:57 Brad King Note Added: 0038280
2015-03-23 11:58 Brad King Severity minor => feature
2015-03-23 11:58 Brad King Status new => backlog
2015-12-20 11:35 Gregor Jasny Assigned To => Gregor Jasny
2015-12-20 11:35 Gregor Jasny Status backlog => assigned
2015-12-20 11:38 Gregor Jasny Note Added: 0040004
2016-01-30 17:32 Gregor Jasny Relationship added related to 0015946
2016-01-30 17:41 Gregor Jasny Relationship added related to 0015183
2016-06-10 14:29 Kitware Robot Note Added: 0042728
2016-06-10 14:29 Kitware Robot Status assigned => resolved
2016-06-10 14:29 Kitware Robot Resolution open => moved
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team