Xcode: Control schema generation via variable

Issue: #15441