Help/release/dev/cmake-xcode-schemes.rst
@@ -3,4 +3,4 @@ cmake-xcode-schemes
 
 * The :generator:`Xcode` generator got the ability to create schema files.
   This is still an experimental feature and can be activated by setting the
-  :prop_gbl:`XCODE_GENERATE_SCHEME` global property to a ``TRUE`` value.
+  :variable:`CMAKE_XCODE_GENERATE_SCHEME` variable to a ``TRUE`` value.
