Help/variable/CMAKE_XCODE_GENERATE_SCHEME.rst
@@ -1,5 +1,5 @@
-XCODE_GENERATE_SCHEME
----------------------
+CMAKE_XCODE_GENERATE_SCHEME
+---------------------------
 
 If enabled, the Xcode generator will generate schema files. Those are
 are useful to invoke analyze, archive, build-for-testing and test
